seaqt/QtNetwork/gen_qhstspolicy.h

class QDateTime;
class QHstsPolicy;
typedef struct QDateTime QDateTime;
typedef struct QHstsPolicy QHstsPolicy;
QHstsPolicy* QHstsPolicy_new();
QHstsPolicy* QHstsPolicy_new2(QDateTime* expiry, int flags, struct miqt_string host);
QHstsPolicy* QHstsPolicy_new3(QHstsPolicy* rhs);
QHstsPolicy* QHstsPolicy_new4(QDateTime* expiry, int flags, struct miqt_string host, int mode);
void QHstsPolicy_operatorAssign(QHstsPolicy* self, QHstsPolicy* rhs);
void QHstsPolicy_swap(QHstsPolicy* self, QHstsPolicy* other);
void QHstsPolicy_setHost(QHstsPolicy* self, struct miqt_string host);
struct miqt_string QHstsPolicy_host(const QHstsPolicy* self);
void QHstsPolicy_setExpiry(QHstsPolicy* self, QDateTime* expiry);
QDateTime* QHstsPolicy_expiry(const QHstsPolicy* self);
void QHstsPolicy_setIncludesSubDomains(QHstsPolicy* self, bool include);
bool QHstsPolicy_includesSubDomains(const QHstsPolicy* self);
bool QHstsPolicy_isExpired(const QHstsPolicy* self);
void QHstsPolicy_setHost2(QHstsPolicy* self, struct miqt_string host, int mode);
struct miqt_string QHstsPolicy_host1(const QHstsPolicy* self, unsigned int options);